--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
         <link rel="icon png" type="image/png" href="images/carniumLogo.png">
         <!-- <script src="https://kit.fontawesome.com/b8300cc200.js"></script> -->
+        <link rel="stylesheet" href="instafeed-project/css/bootstrap.min.css">
+        <link rel="stylesheet" href="instafeed-project/css/magnific.css">
         <link href="styles/main.css" rel="stylesheet">
     </head>
     <body>
@@ -34,7 +36,7 @@
                         <a href="#menu" title="Menu">MENU</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="#notreHistoire" 
+                        <a href="#notreHistoire"
                         title="Notre histoire">NOTRE HISTOIRE</a>
                     </li>
                     <li class="menuItem">
@@ -47,7 +49,7 @@
                         <a href="#Commande" title="Commande">COMMANDE</a>
                     </li>
                     <li class="menuItem">
-                        <a href="pages/contact.html" title="Contact & Commande">CONTACT /GROUPE</a>
+                        <a href="pages/contact.php" title="Contact & Commande">CONTACT /GROUPE</a>
                     </li>
                     <li class="menuItem current">
                         <a href="index.html" title="Fas">FAQ</a>
@@ -180,7 +182,7 @@
                                 </p>
                                 <p>
                                     dessert
-                                </p>                    
+                                </p>
                             </div>
                             <div class="prix_menu3">
                                 <p>
@@ -244,7 +246,7 @@
                                         <img src="images/man.png" alt="hbiba">
                                         <div>
                                             <h3>
-                                            Yacine   
+                                            Yassine
                                             </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
@@ -256,7 +258,7 @@
                                         <img src="images/girl.png" alt="hbiba">
                                         <div>
                                             <h3>
-                                            Yacine  
+                                            Yassine
                                             </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
@@ -268,7 +270,7 @@
                                         <img src="images/girl1.png" alt="hbiba">
                                         <div>
                                             <h3>
-                                            Yacine  
+                                            Yassine
                                             </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
@@ -280,7 +282,7 @@
                                         <img src="images/boy.png" alt="hbiba">
                                         <div>
                                             <h3>
-                                            Yacine  
+                                            Yassine
                                             </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
@@ -292,7 +294,7 @@
                                         <img src="images/girl2.png" alt="hbiba">
                                         <div>
                                             <h3>
-                                            Yacine  
+                                            Yassine
                                             </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
@@ -301,7 +303,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                     <div id="NosPartenaires">
                         <h2 class=h2Partenaires>
                             <hr>
@@ -363,8 +365,16 @@
                     </div>
                 </div>
             </div>
-        </div>
-         <footer>
+            <div id="gallery">
+                 <h2 class=h2Gallery>
+                    <hr>
+                    Gallerie Instagram
+                    <hr>
+                </h2>
+                <div id="instafeed" class="gallery-disposition gallery-item"></div>
+            </div> 
+        </div>  
+        <footer>
             <div class="PageDown">
               <div class="info">
                 <p>Carnium</p>
@@ -378,7 +388,7 @@
                   <li><a href="#">LE CONCEPT</a></li>
                   <li><a href="#notreHistoire">NOTRE HISTOIRE</a></li>
                   <li><a href="#team">LA TEAM</a></li>
-                  <li><a href="pages/contact.html">CONTACT/RÉSERVATION</a></li>
+                  <li><a href="pages/contact.php">CONTACT/RÉSERVATION</a></li>
                   <li><a href="#NosPartenaires">NOS PARTENAIRES</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
@@ -395,5 +405,9 @@
             </div>
          </footer>
         <script src="scripts/index.js"></script>
+        <script src="instafeed-project/js/jquery.min.js"></script>
+        <script src="instafeed-project/js/instafeed.min.js"></script>
+        <script src="instafeed-project/js/magnific.min.js"></script>
+        <script src="instafeed-project/js/custom.js"></script>
     </body>
 </html>
