--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="fr">
  <head>
    <meta charset="utf-8">
@@ -69,4 +69,4 @@
    </div>
    <script src="scripts/main.js"></script>
  </body>
-</html>
+</html> -->
