--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>CARNIUM</title>
-        <meta name="description" content="Restaurant CARNIUM"/>
-        <!-- <link rel="stylesheet" media="(orientation:portrait)" href="portrait.css"> -->
-        <!-- <link rel="stylesheet" media="(orientation:landscape)" href="paysage.css"> -->
-        <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-        <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
+        <meta name="Le Restaurant qui révolu le Grill & Barr" content="Restaurant CARNIUM"/>
         <link rel="icon png" type="image/png" href="images/carniumLogo.png">
-        <!-- <link rel="stylesheet" href="instafeed-project/css/bootstrap.min.css">-->
-        <!-- <link rel="stylesheet" href="instafeed-project/css/magnific.css">  -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin="" />
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -104,6 +98,7 @@
                 <div class="containerResevation">
                     <img class="" src="images/SVG/carniumC.svg" alt="logo C de carnium">
                     <h3> CARNIUM </h3>
+                    <h4>GRILL AND BAR</h4>
                     <a href="#"  title="Commande"> <span id="commandeLink">COMMANDEZ</span></a>
                 </div>
             </div>
