--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                         <a href="index.html" title="Accueil">ACCUEIL</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="#menu" title="Menu">MENU</a>
+                        <a href="#notreConcept"
+                        title="Notre Concept">NOTRE CONCEPT</a>
                     </li>
                     <li class="menuItem current">
                         <a href="#livraison" title="Commande">COMMANDE</a>
                     </li>
                     <li class="menuItem current">
-                            <a href="#notreConcept"
-                            title="Notre Concept">NOTRE CONCEPT</a>
-                    </li>
+                        <a href="#menu" title="Menu">MENU</a>
+                    </li> 
                     <li class="menuItem">
                         <a href="pages/contact.php" title="Contact & Commande">CONTACT /GROUPE</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="pages/faq.html" title="Fas">FAQ</a>
+                        <a href="#faq" title="FAQ">FAQ<a>
                     </li>
                 </ul>
                 <div class="reseauxSoci">
@@ -75,7 +75,7 @@
                     </div>
                         <div class="item">
                         <div class="item__image">
-                            <img src="images/image4.jpeg" alt="hbiba">
+                            <img src="images/image4.jpg" alt="hbiba">
                         </div>
                     </div>
                     <div class="item">
@@ -103,33 +103,6 @@
             </div>
             <div class="background">
                 <div class="container_first">
-                    <div id="notreConcept">
-                        <h2 class="h2Concept">
-                            <hr>
-                            NOTRE CONCEPT
-                            <hr>
-                        </h2>
-                        <h4 class="h4Concept">
-                                CARNIUM, c’est quoi ?
-                        </h4>
-                        <div class="pageLeftConcept">
-                            <div class=imageConcept>
-                                <img src="images/SVG/recherche.svg" alt="NOTRE CONCEPT">
-                            </div>
-                            <p>
-                                CARNIUM ce sont des planches carnivores « individuelles » ou « gourmandes à partager ». Des viandes de qualité, préparées avec amour dans nos marinades maison et grillées à la flamme avant d’être « slicées ».</p>
-                            <p>
-                                Notre variété de viandes est soigneusement sélectionnée et livrée quotidiennement par notre artisan-boucher afin de garantir sa fraicheur. Tous nos produits sont 100% frais et faits maison, dès sauces maison jusqu’aux frites fraiches de pommes de terre ou de patates douces, en passant par nos desserts du moment.</p>
-                            <p> 
-                                Grâce à notre cuisine ouverte sur la salle et visuellement sur la rue, CARNIUM est aussi une expérience client unique : Une subtile odeur de cuisson à la flamme, un show du passage de la viande « du cru au cuit » entretenu par notre grillardin et une sympathique ambiance de convivialité avec nos planches gourmandes à partager (disponibles le soir et le weekend). 
-                            </p>
-                            <p>
-                                    L’offre CARNIUM est hybride :</br>
-                                    <span> Midi : Restauration « fast good » avec des formules individuelles, commande au comptoir et service à table.</span></br>
-                                    <span> Soir : En plus de l’offre du midi, des formules à partager et commande et service à table.</span></br>
-                            </p>
-                        </div>
-                    </div>
                     <div id="menu">
                         <h2 class="h2NotreFormule">
                             <hr>
@@ -205,14 +178,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="background2">
-                <div class="container_second">
                     <div id="livraison">
                         <h2 class="h2Livraison">
                             <hr>
-                            livraison 
+                            Commande 
                             <hr>
                         </h2>
                         <div class="livraisonImage">
@@ -220,6 +189,37 @@
                         </div>
                         <div class="linkUber">
                             <a href="#">ALLER SUR UBER EAT</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="background2">
+                <div class="container_second">
+                    <div id="notreConcept">
+                        <h2 class="h2Concept">
+                            <hr>
+                            NOTRE CONCEPT
+                            <hr>
+                        </h2>
+                        <h4 class="h4Concept">
+                                CARNIUM, c’est quoi ?
+                        </h4>
+                        <div class="pageLeftConcept">
+                            <div class=imageConcept>
+                                <img src="images/SVG/recherche.svg" alt="NOTRE CONCEPT">
+                            </div>
+                            <p>
+                                CARNIUM ce sont des planches carnivores « individuelles » ou « gourmandes à partager ». Des viandes de qualité, préparées avec amour dans nos marinades maison et grillées à la flamme avant d’être « slicées ».</p>
+                            <p>
+                                Notre variété de viandes est soigneusement sélectionnée et livrée quotidiennement par notre artisan-boucher afin de garantir sa fraicheur. Tous nos produits sont 100% frais et faits maison, dès sauces maison jusqu’aux frites fraiches de pommes de terre ou de patates douces, en passant par nos desserts du moment.</p>
+                            <p> 
+                                Grâce à notre cuisine ouverte sur la salle et visuellement sur la rue, CARNIUM est aussi une expérience client unique : Une subtile odeur de cuisson à la flamme, un show du passage de la viande « du cru au cuit » entretenu par notre grillardin et une sympathique ambiance de convivialité avec nos planches gourmandes à partager (disponibles le soir et le weekend). 
+                            </p>
+                            <p>
+                                    L’offre CARNIUM est hybride :</br>
+                                   <span> Midi : Restauration « fast good » avec des formules individuelles, commande au comptoir et service à table.</span></br>
+                                   <span> Soir : En plus de l’offre du midi, des formules à partager et commande et service à table.</span></br>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -260,6 +260,7 @@
                     </div>
                 </div>
           </div>
+          <div id="faq">
             <h2 class="h2faq">
                 <hr>
                 FAQ
@@ -324,6 +325,7 @@
               </li>
             </ul>
           </main>
+        </div>
         <footer>
             <div class="PageDown">
               <div class="info">
